# i2p2-final-project

./: README.md
2025_I2P2_ final_project_client/: CMakeLists.txt  main.cpp
2025_I2P2_ final_project_client/Bullet/: Bullet.cpp  FireNetBullet.cpp
2025_I2P2_ final_project_client/Connect/: Client.cpp  Client.hpp
2025_I2P2_ final_project_client/Connet/: Client.cpp  Client.hpp
2025_I2P2_ final_project_client/Enemy/: BossEnemy.hpp  Enemy.cpp
2025_I2P2_ final_project_client/Engine/: GameEngine.cpp  GameEngine.hpp  IObject.hpp  Sprite.cpp  Sprite.hpp
2025_I2P2_ final_project_client/Scene/: PlayScene.cpp  RemotePlayScene.cpp  RemotePlayScene.hpp
2025_I2P2_ final_project_client/Turret/: Shovel.cpp
2025_I2P2_ final_project_client/UI/Component/: Slider.cpp
2025_I2P2_ final_project_server/: CMakeLists.txt  main.cpp
2025_I2P2_ final_project_server/Bullet/: FireBullet.cpp
2025_I2P2_ final_project_server/Connect/: RenderSender.cpp  RenderSender.hpp
2025_I2P2_ final_project_server/Connet/: RenderSender.cpp  RenderSender.hpp
2025_I2P2_ final_project_server/Enemy/: Enemy.cpp  Enemy.hpp  PlaneEnemy.cpp  SoldierEnemy.cpp  TankEnemy.cpp
2025_I2P2_ final_project_server/Engine/: GameEngine.cpp  IObject.hpp  LOG.cpp  Sprite.cpp  Sprite.hpp
2025_I2P2_ final_project_server/Player/: Player.cpp  Player.hpp
2025_I2P2_ final_project_server/Resource/: enemy1.txt  enemy2.txt  scoreboard.txt
2025_I2P2_ final_project_server/Scene/: PlayScene.cpp  ScoreboardScene.cpp  StartScene.cpp  SubmitScene.hpp  WinScene.cpp
2025_I2P2_ final_project_server/Turret/: AbsorptionTurret.cpp  AbsorptionTurret.hpp  Turret.cpp  Turret.hpp
2025_I2P2_ final_project_server/UI/Animation/: DirtyEffect.cpp
2025_I2P2_ final_project_server/UI/Component/: Image.cpp  Image.hpp  Label.cpp  Label.hpp
2025_I2P2_TowerDefense-main/: CMakeLists.txt  main.cpp
2025_I2P2_TowerDefense-main/Bullet/: Bullet.cpp  Bullet.hpp  FireBullet.cpp  FireNetBullet.hpp  LaserBullet.cpp
2025_I2P2_TowerDefense-main/Enemy/: BossEnemy.cpp  Enemy.cpp  Enemy.hpp  PlaneEnemy.cpp  SoldierEnemy.cpp
2025_I2P2_TowerDefense-main/Engine/: IScene.hpp
2025_I2P2_TowerDefense-main/Resource/: enemy1.txt  enemy2.txt  scoreboard.txt
2025_I2P2_TowerDefense-main/Scene/: PlayScene.cpp  ScoreboardScene.cpp  ScoreboardScene.hpp  SubmitScene.cpp  WinScene.cpp
2025_I2P2_TowerDefense-main/Turret/: AbsorptionTurret.cpp  Turret.cpp  Turret.hpp
2025_I2P2_TowerDefense-main/UI/Animation/: DirtyEffect.hpp
2025_I2P2_final_project_client/: CMakeLists.txt  b  c  c_cpp_properties.json  main.cpp
2025_I2P2_final_project_client/Bullet/: BounceBullet.cpp  BounceBullet.hpp  Bullet.cpp  Bullet.hpp  FireBullet.cpp  FireBullet.hpp  FireNetBullet.cpp  FireNetBullet.hpp  LaserBullet.cpp  LaserBullet.hpp  OrbitBullet.cpp  OrbitBullet.hpp
2025_I2P2_final_project_client/Camera/: Camera.cpp  Camera.hpp
2025_I2P2_final_project_client/Connect/: Client.cpp  Client.hpp
2025_I2P2_final_project_client/Enemy/: ArmoredEnemy.cpp  ArmoredEnemy.hpp  BossEnemy.cpp  BossEnemy.hpp  Enemy.cpp  Enemy.hpp  PlaneEnemy.cpp  PlaneEnemy.hpp  SoldierEnemy.cpp  SoldierEnemy.hpp  StealthEnemy.cpp  StealthEnemy.hpp  TankEnemy.cpp  TankEnemy.hpp
2025_I2P2_final_project_client/Engine/: GameEngine.cpp  GameEngine.hpp  Group.cpp  Group.hpp  IObject.cpp  IObject.hpp  IScene.hpp  LOG.hpp  Sprite.cpp  Sprite.hpp
2025_I2P2_final_project_client/Map/: Texture.cpp  Texture.hpp  TextureButton.cpp  TextureButton.hpp
2025_I2P2_final_project_client/Player/: Player.cpp  Player.hpp
2025_I2P2_final_project_client/Resource/: Deafault.json  map1.json  map2.json  record.txt  scoreboard.txt
2025_I2P2_final_project_client/Resource/images/play/: RenderSender Code Explanation.html
2025_I2P2_final_project_client/Resource/images/play/RenderSender Code Explanation_files/: saved_resource.html
2025_I2P2_final_project_client/Scene/: ChooseDrawMapScene.cpp  ChooseDrawMapScene.hpp  DrawMapScene.cpp  DrawMapScene.hpp  LoadingScene.cpp  LoadingScene.hpp  LoseScene.cpp  PlayScene.cpp  PlayScene.hpp  RemotePlayScene.cpp  ScoreboardScene.cpp  SettingWHScene.cpp  SettingWHScene.hpp  SettingsScene.cpp  StageSelectScene.cpp  StageSelectScene.hpp  StartScene.cpp  SubmitScene.cpp  SubmitScene.hpp  WinScene.cpp
2025_I2P2_final_project_client/Turret/: AbsorptionTurret.cpp  AbsorptionTurret.hpp  LaserTurret.cpp  MachineGunTurret.cpp  Shovel.cpp  Shovel.hpp  Turret.cpp  Turret.hpp  TurretButton.cpp  TurretButton.hpp
2025_I2P2_final_project_client/UI/Component/: Image.cpp  Image.hpp  ImageButton.cpp  Label.hpp  Slider.cpp  Slider.hpp
2025_I2P2_final_project_client/Weapon/: BounceWeapon.cpp  BounceWeapon.hpp  CircleWeapon.cpp  CircleWeapon.hpp  GunWeapon.cpp  GunWeapon.hpp  ShotgunWeapon.cpp  ShotgunWeapon.hpp  Weapon.cpp  Weapon.hpp
2025_I2P2_final_project_client/json-develop/json-develop/: README.md
2025_I2P2_final_project_client/json-develop/json-develop/docs/mkdocs/docs/community/: governance.md
2025_I2P2_final_project_client/json-develop/json-develop/include/nlohmann/detail/input/: lexer.hpp
2025_I2P2_final_project_client/json-develop/json-develop/tests/abi/include/nlohmann/: json_v3_10_5.hpp
2025_I2P2_final_project_server/: CMakeLists.txt  main.cpp
2025_I2P2_final_project_server/Connect/: RenderSender.cpp  RenderSender.hpp
2025_I2P2_final_project_server/Enemy/: ArmoredEnemy.cpp  ArmoredEnemy.hpp  BossEnemy.cpp  BossEnemy.hpp  Enemy.cpp  Enemy.hpp  Move.cpp  Move.hpp  OldDirectMove.cpp  StealthEnemy.cpp  StealthEnemy.hpp
2025_I2P2_final_project_server/Engine/: GameEngine.cpp  GameEngine.hpp  IObject.hpp  Point.cpp  Point.hpp  Sprite.cpp  Sprite.hpp
2025_I2P2_final_project_server/Player/: Player.cpp  Player.hpp
2025_I2P2_final_project_server/Resource/: scoreboard.txt
2025_I2P2_final_project_server/Scene/: PlayScene.cpp  PlayScene.hpp  ScoreboardScene.hpp  StartScene.cpp  WinScene.hpp
2025_I2P2_final_project_server/UI/Component/: Image.cpp  Image.hpp  Label.cpp  (+1 more)
2025_I2P2_final_project_server_backup/: CMakeLists.txt
2025_I2P2_final_project_server_backup/Enemy/: Enemy.cpp  Enemy.hpp
(+1 files in other folders)
